@@ -1,4 +1,4 @@
-#	$NetBSD: files.acpi,v 1.107 2018/10/17 00:03:47 jmcneill Exp $
+#	$NetBSD: files.acpi,v 1.108 2018/10/19 21:09:10 jakllsch Exp $
 
 include "dev/acpi/acpica/files.acpica"
 
@@ -240,5 +240,9 @@ file	dev/acpi/plgpio_acpi.c		plgpio_acpi
 # DesignWare I2C controller
 attach	dwiic at acpinodebus with dwiic_acpi
 file	dev/acpi/dwiic_acpi.c		dwiic_acpi
+
+# AMD Cryptographic Coprocessor
+attach	amdccp at acpinodebus with amdccp_acpi
+file	dev/acpi/amdccp_acpi.c		amdccp_acpi
 
 include	"dev/acpi/wmi/files.wmi"
